--- a/SubmissionTwo/app/src/main/res/layout/fragment_detail.xml
+++ b/SubmissionTwo/app/src/main/res/layout/fragment_detail.xml
@@ -78,6 +78,7 @@
             android:layout_width="24dp"
             android:layout_height="23dp"
             android:layout_marginRight="6dp"
+            android:contentDescription="@string/icon_company_content_desc"
             android:src="@drawable/baseline_home_work_24"
             app:layout_constraintBottom_toBottomOf="@+id/tv_user_company"
             app:layout_constraintEnd_toStartOf="@+id/tv_user_company"
@@ -103,6 +104,7 @@
             android:layout_width="24dp"
             android:layout_height="23dp"
             android:layout_marginRight="6dp"
+            android:contentDescription="@string/icon_origin_content_desc"
             android:src="@drawable/baseline_location_on_24"
             app:layout_constraintBottom_toBottomOf="@+id/tv_user_origin"
             app:layout_constraintEnd_toStartOf="@+id/tv_user_origin"
@@ -127,6 +129,7 @@
             android:layout_height="23dp"
             android:src="@drawable/ic_about"
             android:layout_marginRight="6dp"
+            android:contentDescription="@string/icon_username_content_desc"
             app:layout_constraintBottom_toBottomOf="@+id/tv_username"
             app:layout_constraintEnd_toStartOf="@+id/tv_username"
             app:layout_constraintTop_toTopOf="@+id/tv_username"
