--- a/SubmissionTwo/app/src/main/res/layout/item_row_user.xml
+++ b/SubmissionTwo/app/src/main/res/layout/item_row_user.xml
@@ -22,6 +22,7 @@
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/user_photo_content_desc"
             card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintTop_toTopOf="parent"
