--- a/SubmissionTwo/app/src/main/res/drawable/round_button.xml
+++ b/SubmissionTwo/app/src/main/res/drawable/round_button.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#c20586">
+    android:color="?attr/colorSecondary">
     <item>
         <shape android:shape="oval">
-            <solid android:color="#fa09ad"/>
+            <solid android:color="?attr/colorSecondary"/>
         </shape>
     </item>
 </ripple>
