--- a/SubmissionTwo/app/src/main/res/layout/fragment_about.xml
+++ b/SubmissionTwo/app/src/main/res/layout/fragment_about.xml
@@ -5,7 +5,9 @@
     android:id="@+id/scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.about.AboutFragment">
+    tools:context=".ui.about.AboutFragment"
+    style="@style/BackgroundColor"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -24,7 +26,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_scrollFlags="scroll|enterAlways|snap"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+                app:theme="@style/ToolBarStyle"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -33,7 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="-80dp"
-            android:background="@color/purple_200"
+            android:background="?attr/colorSecondary"
             app:layout_constraintBottom_toTopOf="@+id/img_item_photo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,6 +120,7 @@
             android:text="@string/instagram"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            style="@style/Button"
             app:layout_constraintTop_toBottomOf="@+id/tv_user_email" />
 
         <Button
@@ -126,6 +129,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="@string/github"
+            style="@style/Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/b_visit_instagram" />
