--- a/SubmissionTwo/app/src/main/res/layout/item_row_user.xml
+++ b/SubmissionTwo/app/src/main/res/layout/item_row_user.xml
@@ -15,7 +15,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="8dp"
+        style="@style/ItemRow">
 
         <ImageView
             android:id="@+id/img_item_photo"
