--- a/SubmissionTwo/app/src/main/res/values-night/themes.xml
+++ b/SubmissionTwo/app/src/main/res/values-night/themes.xml
@@ -1,18 +1,40 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.SubmissionOne" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/blue_gray_900</item>
+        <item name="colorPrimaryVariant">?attr/colorPrimary</item>
+        <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/blue_gray_700</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/white</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+    <style name="ToolBarStyle" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:background">@color/blue_gray_900</item>
+    </style>
+    <style name="IconColor">
+        <item name="android:tint">@color/blue_gray_200</item>
+    </style>
+    <style name="BackgroundColor">
+        <item name="android:background">@color/blue_gray_900</item>
+    </style>
+    <style name="TabStyle" parent="BackgroundColor">
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="tabTextColor">@color/blue_gray_500</item>
+    </style>
+    <style name="ItemRow">
+        <item name="android:background">@color/blue_gray_800</item>
+    </style>
+    <style name="Button">
+        <item name="android:backgroundTint">@color/blue_gray_700</item>
     </style>
 </resources>
