--- a/SubmissionTwo/app/src/main/res/values/themes.xml
+++ b/SubmissionTwo/app/src/main/res/values/themes.xml
@@ -1,18 +1,42 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.SubmissionOne" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/blue_gray_500</item>
+        <item name="colorPrimaryVariant">@color/blue_gray_500</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/blue_gray_300</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColor">@color/blue_gray_700</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+    </style>
+    <style name="ToolBarStyle" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+    </style>
+    <style name="IconColor">
+        <item name="android:tint">@color/black</item>
+    </style>
+    <style name="BackgroundColor">
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="TabStyle" parent="BackgroundColor">
+        <item name="tabSelectedTextColor">@color/blue_gray_700</item>
+        <item name="tabIndicatorColor">@color/blue_gray_700</item>
+        <item name="tabTextColor">@color/blue_gray_500</item>
+    </style>
+    <style name="ItemRow">
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="SplashScreen">
+        <item name="android:background">@color/white</item>
+    </style>
+    <style name="Button">
+        <item name="android:backgroundTint">?attr/colorSecondary</item>
     </style>
 </resources>
